2007-08-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemConePlugin.cpp: Add the application/vlc
	mime-type to the Cone plugin (Closes: #469568)

2007-08-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/idl/Makefile.am:
	* browser-plugin/idl/totemICone.idl:
	* browser-plugin/idl/totemIConeAudio.idl:
	* browser-plugin/idl/totemIConeInput.idl:
	* browser-plugin/idl/totemIConePlaylist.idl:
	* browser-plugin/idl/totemIConeVideo.idl:
	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPluginGlue.h:
	* configure.in: Add the Cone plugin, a plugin to mimic the
	VLC plugin, write IDL files from the web developers 
	documentation available on their site (Helps: #462544)

	* browser-plugin/totemBasicPlugin.h:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemGMPError.h:
	* browser-plugin/totemGMPPlugin.h:
	* browser-plugin/totemMullYPlugin.h:
	* browser-plugin/totemNarrowSpacePlugin.h:
	Fix some includes #ifdef

2007-08-29  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add application/sdp for Real and Quicktime
	Session Description Protocol for multicast streaming (Helps: #426657)

2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add application/x-netshow-channel as a
	supported mime-type
	* src/plparse/totem-pl-parser-wm.c:
	(totem_pl_parser_add_asf_parser): Make NSC files unhandled by the
	playlist parsers, as GStreamer is supposed to handle it
	(Helps: #350595)

2007-08-28  Tim-Philipp Müller  <tim at centricular dot net>

	* browser-plugin/totem-plugin-viewer.c:
	  Fix compile.

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-smil.c: (parse_smil_entry): Add
	support for the author, "dur", "clip-begin", abstract, and copyright