@@ -1,3 +1,9 @@
+2007-08-31  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-interface.c: (link_button_clicked_cb): Escape the URI
+	before using it in a shell, otherwise the fragment ends up being
+	a comment, and it's not being used
+
 2007-08-29  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemConePlugin.cpp: Add the application/vlc
